k8s-specifications/result-clusterservice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: result
  name: result-clusterip
  namespace: vote
spec:
  type: ClusterIP
  ports:
  - name: "result-service"
    port: 5004
    targetPort: 80
  selector:
    app: result
