k8s-specifications/result-nodeportservice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: result
  name: result-nodeport
  namespace: vote
spec:
  type: NodePort
  ports:
  - name: "result-service"
    port: 5001
    targetPort: 80
    nodePort: 31001
  selector:
    app: result
