k8s-specifications/vote-clusterservice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote
  name: vote-clusterip
  namespace: vote
spec:
  type: ClusterIP
  ports:
  - name: "vote-service"
    port: 5003
    targetPort: 80
  selector:
    app: vote
