k8s-specifications/vote-nodeportservice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote
  name: vote-nodeport
  namespace: vote
spec:
  type: NodePort
  ports:
  - name: "vote-service"
    port: 5000
    targetPort: 80
    nodePort: 31000
  selector:
    app: vote
