k8s-specifications/httproute-vote.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vote-route
  namespace: vote
spec:
  parentRefs:
  - name: nginx-gateway          # Gateway name
    namespace: vote   # Gateway namespace
  hostnames:
  - vote.polling.com
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: /
    backendRefs:
      - name: vote-clusterip
        port: 5003
